--- a/style.css
+++ b/style.css
@@ -20,15 +20,19 @@ body, html {
     font-family: Poppins;
     font-size: 16px;
     display: flex;
-    align-items: center;
+    align-items: flex-end;
     justify-content: center;
     flex-direction: column;
+    flex-wrap: nowrap;
 }
 
 #introduction {
     color: white;
     order: 1;
     align-self: flex-start;
+    height: 100%;
+    width: 25%;
+    text-align: left;
 }
 
 #free-trial {
@@ -66,5 +70,5 @@ body, html {
 input {
     border-radius: 5px;
     padding: 10px;
-    width: 20%;
+    width: 80%;
 }
