--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ Gris clair (bord de l’input en temps normal + texte en bas du bouton vert):  r
 }
 
 
-@media (min-width: 768px) {
+@media (min-width: 1024px) {
     body {
         background-image: url('assets/bg-intro-desktop.png');
     }
@@ -23,7 +23,6 @@ Gris clair (bord de l’input en temps normal + texte en bas du bouton vert):  r
         width: 80%; 
         height: 80%;
         flex-direction: row;
-        margin-bottom: 20px;
     }
 
     #left-part {
@@ -46,9 +45,17 @@ Gris clair (bord de l’input en temps normal + texte en bas du bouton vert):  r
         justify-content: center;
         align-items: center;
     }
+
+    #form .form--error {
+        margin-right: 4vw;
+    }
+
+    #modal--close {
+        margin-top: -5px;
+    }
 }
 
-@media (max-width: 767px) {
+@media (max-width: 1023px) /*Mobile Mode*/ {
     body {
         background-image: url('assets/bg-intro-mobile.png');
     }
@@ -57,8 +64,8 @@ Gris clair (bord de l’input en temps normal + texte en bas du bouton vert):  r
         width: 90%; 
         height: 80%;
         flex-direction: column;
-        margin-top: 50vh;
-        margin-bottom: 20px;
+        justify-content: center;
+        margin-top: 40vh;
     }
 
     #left-part {
@@ -86,10 +93,17 @@ Gris clair (bord de l’input en temps normal + texte en bas du bouton vert):  r
         margin-top: 30px;
     }
 
+    #form .form--error {
+        margin-right: 9vw;
+    }
+
+    #modal--close {
+        margin-top: -3px;
+    }
 }
 
 body, html {
-    height: 100%;
+    height: 110%;
     width: 100%;
     background-color: rgb(255, 122, 122);
     font-family: Poppins;
@@ -180,6 +194,12 @@ input:focus {
     border: 1px solid rgb(62, 60, 73);
 }
 
+input:invalid {
+    border: 1px solid rgb(255, 122, 122);
+    outline: none;
+    background: url('assets/icon-error.svg') no-repeat 95% 50%; 
+}
+
 
 #form--submit {
     width: 80%;
@@ -191,9 +211,10 @@ input:focus {
     font-weight: 600;
     margin-top: 20px;
     margin-bottom: 10px;
+    box-shadow: 0px 3px 4px rgba(0, 0, 0, 0.15)
 }
 
-footer {
+#terms p {
     font-size: 9px;
     margin-bottom: 30px;
     color: rgb(185, 182,211);
@@ -202,7 +223,59 @@ footer {
     text-align: center;
 }
 
-footer a {
+#terms a {
     color:rgb(255, 122, 122);
     font-weight: 700;
+}
+
+
+#modal {
+    display: none;
+    position: absolute; 
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0,0,0,0.5);
+}
+
+#modal--header {
+    background-color:rgb(255, 122, 122); 
+    margin: 15% auto; 
+    margin-bottom: 0;
+    border: 2px solid #000;
+    width: 75%;
+    height: 50px;
+}
+
+#modal--header p {
+    text-align: center;
+    vertical-align: middle; 
+    margin-top: 1%;
+    color: #000;
+}
+
+#modal--close {
+    color: #777;
+    float: right;
+    font-size: 28px; 
+    font-weight: 20px;
+    margin-right: 10px;
+}
+
+#modal--content {
+    background-color: rgb(185, 182,211);
+    margin: 15% auto;
+    margin-top: 0; 
+    padding: 20px;
+    border: 1px solid #888;
+    width: 75%;
+}
+
+#modal--close:hover, #modal--close:focus {
+    color: #000; 
+    text-decoration: none;
+    cursor: pointer;
 }
